// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse * expr 1`] = `
{
  "statements": [
    {
      "binding": {
        "name": "_",
        "span": [
          4,
          5,
        ],
      },
      "span": [
        0,
        13,
      ],
      "type": "let",
      "value": {
        "args": [
          {
            "span": [
              8,
              9,
            ],
            "type": "constant",
            "value": {
              "type": "int",
              "value": 1,
            },
          },
          {
            "span": [
              12,
              13,
            ],
            "type": "constant",
            "value": {
              "type": "int",
              "value": 2,
            },
          },
        ],
        "caller": {
          "name": "*",
          "span": [
            10,
            11,
          ],
          "type": "identifier",
        },
        "span": [
          8,
          13,
        ],
        "type": "application",
      },
    },
  ],
}
`;

exports[`parse + and * prec 1`] = `
{
  "statements": [
    {
      "binding": {
        "name": "_",
        "span": [
          4,
          5,
        ],
      },
      "span": [
        0,
        17,
      ],
      "type": "let",
      "value": {
        "args": [
          {
            "span": [
              8,
              9,
            ],
            "type": "constant",
            "value": {
              "type": "int",
              "value": 1,
            },
          },
          {
            "args": [
              {
                "span": [
                  12,
                  13,
                ],
                "type": "constant",
                "value": {
                  "type": "int",
                  "value": 2,
                },
              },
              {
                "span": [
                  16,
                  17,
                ],
                "type": "constant",
                "value": {
                  "type": "int",
                  "value": 3,
                },
              },
            ],
            "caller": {
              "name": "*",
              "span": [
                14,
                15,
              ],
              "type": "identifier",
            },
            "span": [
              12,
              17,
            ],
            "type": "application",
          },
        ],
        "caller": {
          "name": "-",
          "span": [
            10,
            11,
          ],
          "type": "identifier",
        },
        "span": [
          8,
          17,
        ],
        "type": "application",
      },
    },
  ],
}
`;

exports[`parse + and * prec with parens 1`] = `
{
  "statements": [
    {
      "binding": {
        "name": "_",
        "span": [
          4,
          5,
        ],
      },
      "span": [
        0,
        19,
      ],
      "type": "let",
      "value": {
        "args": [
          {
            "args": [
              {
                "span": [
                  9,
                  10,
                ],
                "type": "constant",
                "value": {
                  "type": "int",
                  "value": 1,
                },
              },
              {
                "span": [
                  13,
                  14,
                ],
                "type": "constant",
                "value": {
                  "type": "int",
                  "value": 2,
                },
              },
            ],
            "caller": {
              "name": "-",
              "span": [
                11,
                12,
              ],
              "type": "identifier",
            },
            "span": [
              9,
              14,
            ],
            "type": "application",
          },
          {
            "span": [
              18,
              19,
            ],
            "type": "constant",
            "value": {
              "type": "int",
              "value": 3,
            },
          },
        ],
        "caller": {
          "name": "*",
          "span": [
            16,
            17,
          ],
          "type": "identifier",
        },
        "span": [
          8,
          19,
        ],
        "type": "application",
      },
    },
  ],
}
`;

exports[`parse + expr 1`] = `
{
  "statements": [
    {
      "binding": {
        "name": "_",
        "span": [
          4,
          5,
        ],
      },
      "span": [
        0,
        13,
      ],
      "type": "let",
      "value": {
        "args": [
          {
            "span": [
              8,
              9,
            ],
            "type": "constant",
            "value": {
              "type": "int",
              "value": 1,
            },
          },
          {
            "span": [
              12,
              13,
            ],
            "type": "constant",
            "value": {
              "type": "int",
              "value": 2,
            },
          },
        ],
        "caller": {
          "name": "+",
          "span": [
            10,
            11,
          ],
          "type": "identifier",
        },
        "span": [
          8,
          13,
        ],
        "type": "application",
      },
    },
  ],
}
`;

exports[`parse - expr 1`] = `
{
  "statements": [
    {
      "binding": {
        "name": "_",
        "span": [
          4,
          5,
        ],
      },
      "span": [
        0,
        13,
      ],
      "type": "let",
      "value": {
        "args": [
          {
            "span": [
              8,
              9,
            ],
            "type": "constant",
            "value": {
              "type": "int",
              "value": 1,
            },
          },
          {
            "span": [
              12,
              13,
            ],
            "type": "constant",
            "value": {
              "type": "int",
              "value": 2,
            },
          },
        ],
        "caller": {
          "name": "-",
          "span": [
            10,
            11,
          ],
          "type": "identifier",
        },
        "span": [
          8,
          13,
        ],
        "type": "application",
      },
    },
  ],
}
`;

exports[`parse appl with 1 arg 1`] = `
{
  "statements": [
    {
      "binding": {
        "name": "_",
        "span": [
          4,
          5,
        ],
      },
      "span": [
        0,
        12,
      ],
      "type": "let",
      "value": {
        "args": [
          {
            "name": "x",
            "span": [
              10,
              11,
            ],
            "type": "identifier",
          },
        ],
        "caller": {
          "name": "f",
          "span": [
            8,
            9,
          ],
          "type": "identifier",
        },
        "span": [
          8,
          12,
        ],
        "type": "application",
      },
    },
  ],
}
`;

exports[`parse appl with 3 args 1`] = `
{
  "statements": [
    {
      "binding": {
        "name": "_",
        "span": [
          4,
          5,
        ],
      },
      "span": [
        0,
        18,
      ],
      "type": "let",
      "value": {
        "args": [
          {
            "name": "x",
            "span": [
              10,
              11,
            ],
            "type": "identifier",
          },
          {
            "name": "y",
            "span": [
              13,
              14,
            ],
            "type": "identifier",
          },
          {
            "name": "z",
            "span": [
              16,
              17,
            ],
            "type": "identifier",
          },
        ],
        "caller": {
          "name": "f",
          "span": [
            8,
            9,
          ],
          "type": "identifier",
        },
        "span": [
          8,
          18,
        ],
        "type": "application",
      },
    },
  ],
}
`;

exports[`parse appl with nested expr 1`] = `
{
  "statements": [
    {
      "binding": {
        "name": "_",
        "span": [
          4,
          5,
        ],
      },
      "span": [
        0,
        16,
      ],
      "type": "let",
      "value": {
        "args": [
          {
            "args": [
              {
                "span": [
                  10,
                  11,
                ],
                "type": "constant",
                "value": {
                  "type": "int",
                  "value": 1,
                },
              },
              {
                "span": [
                  14,
                  15,
                ],
                "type": "constant",
                "value": {
                  "type": "int",
                  "value": 2,
                },
              },
            ],
            "caller": {
              "name": "+",
              "span": [
                12,
                13,
              ],
              "type": "identifier",
            },
            "span": [
              10,
              15,
            ],
            "type": "application",
          },
        ],
        "caller": {
          "name": "f",
          "span": [
            8,
            9,
          ],
          "type": "identifier",
        },
        "span": [
          8,
          16,
        ],
        "type": "application",
      },
    },
  ],
}
`;

exports[`parse appl with nested parens 1`] = `
{
  "statements": [
    {
      "binding": {
        "name": "_",
        "span": [
          4,
          5,
        ],
      },
      "span": [
        0,
        14,
      ],
      "type": "let",
      "value": {
        "args": [
          {
            "span": [
              11,
              12,
            ],
            "type": "constant",
            "value": {
              "type": "int",
              "value": 1,
            },
          },
        ],
        "caller": {
          "name": "f",
          "span": [
            8,
            9,
          ],
          "type": "identifier",
        },
        "span": [
          8,
          14,
        ],
        "type": "application",
      },
    },
  ],
}
`;

exports[`parse appl with no args 1`] = `
{
  "statements": [
    {
      "binding": {
        "name": "_",
        "span": [
          4,
          5,
        ],
      },
      "span": [
        0,
        11,
      ],
      "type": "let",
      "value": {
        "args": [],
        "caller": {
          "name": "f",
          "span": [
            8,
            9,
          ],
          "type": "identifier",
        },
        "span": [
          8,
          11,
        ],
        "type": "application",
      },
    },
  ],
}
`;

exports[`parse block with no let 1`] = `
{
  "statements": [
    {
      "binding": {
        "name": "_",
        "span": [
          5,
          6,
        ],
      },
      "span": [
        1,
        14,
      ],
      "type": "let",
      "value": {
        "span": [
          11,
          12,
        ],
        "type": "constant",
        "value": {
          "type": "int",
          "value": 1,
        },
      },
    },
  ],
}
`;

exports[`parse float 1`] = `
{
  "statements": [
    {
      "binding": {
        "name": "_",
        "span": [
          4,
          5,
        ],
      },
      "span": [
        0,
        12,
      ],
      "type": "let",
      "value": {
        "span": [
          8,
          12,
        ],
        "type": "constant",
        "value": {
          "type": "float",
          "value": 1.23,
        },
      },
    },
  ],
}
`;

exports[`parse ident 1`] = `
{
  "statements": [
    {
      "binding": {
        "name": "_",
        "span": [
          4,
          5,
        ],
      },
      "span": [
        0,
        9,
      ],
      "type": "let",
      "value": {
        "name": "x",
        "span": [
          8,
          9,
        ],
        "type": "identifier",
      },
    },
  ],
}
`;

exports[`parse let block with one let 1`] = `
{
  "statements": [
    {
      "binding": {
        "name": "_",
        "span": [
          5,
          6,
        ],
      },
      "span": [
        1,
        29,
      ],
      "type": "let",
      "value": {
        "binding": {
          "name": "x",
          "span": [
            17,
            18,
          ],
        },
        "body": {
          "span": [
            26,
            27,
          ],
          "type": "constant",
          "value": {
            "type": "int",
            "value": 1,
          },
        },
        "span": [
          13,
          27,
        ],
        "type": "let",
        "value": {
          "span": [
            21,
            22,
          ],
          "type": "constant",
          "value": {
            "type": "int",
            "value": 0,
          },
        },
      },
    },
  ],
}
`;

exports[`parse let block with two let stmts 1`] = `
{
  "statements": [
    {
      "binding": {
        "name": "_",
        "span": [
          5,
          6,
        ],
      },
      "span": [
        1,
        42,
      ],
      "type": "let",
      "value": {
        "binding": {
          "name": "x",
          "span": [
            17,
            18,
          ],
        },
        "body": {
          "binding": {
            "name": "y",
            "span": [
              30,
              31,
            ],
          },
          "body": {
            "span": [
              39,
              40,
            ],
            "type": "constant",
            "value": {
              "type": "int",
              "value": 2,
            },
          },
          "span": [
            26,
            40,
          ],
          "type": "let",
          "value": {
            "span": [
              34,
              35,
            ],
            "type": "constant",
            "value": {
              "type": "int",
              "value": 1,
            },
          },
        },
        "span": [
          13,
          40,
        ],
        "type": "let",
        "value": {
          "span": [
            21,
            22,
          ],
          "type": "constant",
          "value": {
            "type": "int",
            "value": 0,
          },
        },
      },
    },
  ],
}
`;
